<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/category_main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_gradient">

    <include android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_below="@id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/basePanel"
                android:text="@string/start_search"
                android:textAlignment="center"
                android:textColor="@color/showBandColor"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/search_band_text_hint"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textColorHint="@color/showBandColor"
                app:layout_constraintEnd_toStartOf="@+id/search_button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/searchAlbumButton"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/switch_button_left"
                android:text="@string/main_search_album_button"
                android:textColor="@color/showBandColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <Button
                android:id="@+id/searchBandButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/switch_button_middle"
                android:text="@string/main_search_button"
                android:textColor="@color/showBandColor"
                app:layout_constraintEnd_toStartOf="@+id/searchGenreButton"
                app:layout_constraintStart_toEndOf="@+id/searchAlbumButton"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <Button
                android:id="@+id/searchGenreButton"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/switch_button_right"
                android:text="@string/main_search_genre"
                android:textColor="@color/showBandColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <ImageView
                android:id="@+id/search_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/buttonshape"
                app:layout_constraintBottom_toBottomOf="@+id/editText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editText"
                app:srcCompat="@drawable/ic_keyboard_arrow_right_white_48px" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/search_button"
                app:layout_constraintStart_toStartOf="@+id/search_button"
                app:layout_constraintTop_toTopOf="@+id/search_button" />

            <ProgressBar
                android:id="@+id/latestReleasesProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/releases" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/basePanel"
                android:text="@string/main_search_latest_releases"
                android:textAlignment="center"
                android:textColor="@color/showBandColor"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchAlbumButton" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/releases"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mainScreenAdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_gravity="bottom"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-6052092604388790/5586851292"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />
    <!--ads:adUnitId="ca-app-pub-6052092604388790/5586851292"-->
    <!--TEST ads:adUnitId="ca-app-pub-3940256099942544/6300978111"-->

</RelativeLayout>